# picoMidiKeyboard

./: README.md
builds/: midi-keyboard.uf2
src/: CMakeLists.txt  midi-keyboard.c
